# ferrous-ci-cd

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  docker-compose.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
docs/: architecture.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: agent.rs  build.rs  mod.rs  pipeline.rs  project.rs  user.rs
src/application/use_cases/: agent.rs  build.rs  mod.rs  pipeline.rs  project.rs
src/domain/: events.rs  mod.rs
src/domain/entities/: agent.rs  artifact.rs  build.rs  job.rs  mod.rs  pipeline.rs  project.rs  stage.rs  user.rs  workspace.rs
src/domain/repositories/: agent.rs  build.rs  mod.rs  pipeline.rs  project.rs  user.rs
src/domain/services/: agent.rs  build.rs  mod.rs  pipeline.rs
src/domain/value_objects/: agent_id.rs  artifact_id.rs  build_id.rs  build_status.rs  job_id.rs  mod.rs  pipeline_config.rs  pipeline_id.rs  project_id.rs  stage_id.rs  user_id.rs  workspace_id.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/git/: mod.rs
src/infrastructure/repositories/: in_memory.rs  mod.rs  postgres.rs
src/infrastructure/storage/: mod.rs
src/presentation/: mod.rs
src/presentation/api/: mod.rs
src/presentation/cli/: mod.rs
tests/: README.md  agent_tests.rs  build_tests.rs  event_tests.rs  integration_test.rs  pipeline_tests.rs
tests/common/: mod.rs
tests/e2e/: mod.rs
