[package]
name = "ferrous-ci-cd"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern CI/CD system built with Rust, inspired by Jenkins"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ferrous-ci-cd"
readme = "README.md"
keywords = ["ci", "cd", "continuous-integration", "continuous-delivery", "devops"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "uuid", "chrono"] }
diesel = { version = "2.1", features = ["postgres", "sqlite", "chrono", "uuid"] }
diesel_migrations = "2.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15"
dotenv = "0.15"

# Git integration
git2 = "0.20"

# Authentication
jsonwebtoken = { version = "10.1", default-features = true }
bcrypt = "0.17"

# Messaging
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
lapin = "3.7"  # RabbitMQ client

# Testing
mockall = "0.13"
wiremock = "0.6"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
opentelemetry = "0.31"
opentelemetry-jaeger = "0.22"

# System
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.7"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rstest = "0.26"
test-case = "3.1"
pretty_assertions = "1.4"
insta = "1.34"
tempfile = "3.8"
serial_test = "3.0"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[[bin]]
name = "ferrous-ci-cd"
path = "src/main.rs"

[lib]
name = "ferrous_ci_cd"
path = "src/lib.rs"
